<resources>
    <string name="app_name">Tanamin Ai</string>

    <string name="tflite_is_not_initialized_yet">TfLite is not initialized yet</string>
    <string name="no_tflite_interpreter_loaded">No TFLite interpreter loaded</string>
    <string name="description_result">Description</string>
    <string name="maintenance_result">Maintenance</string>

    <!--CustomEditText-->
    <string name="password_error">Password must not be less than 8 characters</string>
    <string name="email_error">invalid email</string>

    <string name="no_prediction_result">no prediction result</string>

    <!--XML-->
    <!--XML Auth-->
    <string name="title_login_page">Sign In</string>
    <string name="message_login_page">Please Sign In to continue</string>
    <string name="message_signUp_page">Create an account to continue</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="title_welcome">Welcome Onboard</string>
    <string name="welcome_greetings">Discover the most suitable plants for your soil type and condition with our recommendation system.</string>

    <!--XML Home-->
    <string name="xml_home">Home</string>
    <string name="xml_xx">xx</string>
    <string name="xml_celcius">°c</string>
    <string name="xml_weather_desc">weather desc</string>
    <string name="xml_location">location</string>
    <string name="xml_information">Information</string>
    <string name="xml_refresh_soil">Refresh Soil</string>
    <string name="xml_soil_condition">Soil Condition</string>
    <string name="xml_nitrogen">Nitrogen</string>
    <string name="xml_n">N</string>
    <string name="xml_phosphorus">Phosphorus</string>
    <string name="xml_p">P</string>
    <string name="xml_potassium">Potassium</string>
    <string name="xml_k">K</string>
    <string name="xml_humidity">Humidity</string>
    <string name="xml_ph">pH</string>
    <string name="xml_temperature">Temperature</string>
    <string name="xml_logo">tanamin ai logo</string>
    <string name="xml_current_weather">current weather condition</string>

    <!--XML Prediction-->
    <string name="xml_prediction">Prediction</string>
    <string name="xml_prediction_desc">Identify the plants that\nmatch your soil conditions.\nClick to get the result</string>
    <string name="xml_start_prediction">Start Prediction...</string>
    <string name="xml_start">Start</string>

    <!--XML Act Result-->
    <string name="xml_result">Result</string>
    <string name="fab_bookmark_result">bookmark result</string>
    <string name="xml_predictedat">PredictedAt :</string>

    <!--XML Bookmark-->
    <string name="xml_result_bookmark">Result Bookmark</string>
    <string name="xml_your_soil_result_saved">Your Soil Result Saved :</string>
    <string name="xml_read_more">read more</string>
    <string name="xml_bookmark">Bookmark</string>

    <!--XML Settings-->
    <string name="xml_settings">Settings</string>
    <string name="xml_profile_name">profile</string>
    <string name="xml_grup_name">C241-PS395</string>
    <string name="xml_settings_name">name</string>
    <string name="xml_theme">Theme</string>
    <string name="xml_app_theme">app theme</string>
    <string name="xml_light_dark">light/dark</string>
    <string name="xml_arrow">arrow right</string>
    <string name="xml_language">Language</string>
    <string name="xml_english_indonesia">english/indonesia</string>
    <string name="xml_logout">Logout</string>
    <string name="xml_cancel">   cancel   </string>
    <string name="xml_are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="xml_yes_logout">Yes, logout</string>
    <string name="xml_info_desc">The soil sensor updated every 5 minute. please click the refresh button to update the soil data</string>

    <!-- alert -->
    <string name="alert_close">Close</string>
    <string name="alert_ok">OK</string>
    <string name="alert_next">Next</string>
    <string name="fetching_failed">failed fetching data</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="weather_data_is_not_available">Weather data is not available</string>
    <string name="location_format">%1$s, %2$s</string>

    <!-- auth -->
    <string name="registration_failed">Registration Failed</string>
    <string name="registration_success">Registration Success</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="pengguna_berhasil_dibuat">user %1$s successfully created</string>
    <string name="login_failed">login failed</string>
    <string name="login_success">login success</string>
    <string name="greetings_login">welcome to tanamin.ai</string>


</resources>